# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md  product_roadmap.md
include/: chip8.h  shaders.h
res/shaders/: vs.glsl
src/: chip8.cpp  chip8.h  main.cpp  shaders.cpp
